--- a/GGMusic1/build.gradle
+++ b/GGMusic1/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-        jcenter()
+        maven {
+            url "http://jcenter.bintray.com"
+        }
 
     }
     dependencies {
@@ -21,7 +23,9 @@ allprojects {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven{ url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
         google()
-        jcenter()
+        maven {
+            url "http://jcenter.bintray.com"
+        }
 
     }
 }
