--- a/Code05/build.gradle
+++ b/Code05/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     repositories {
+        maven{ url 'https://maven.aliyun.com/repository/public'}
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.6.0'
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +17,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{ url 'https://maven.aliyun.com/repository/public'}
         google()
         jcenter()
         
